--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">	
 <title>landing</title>
 	
-<link href="css/landing.css" rel="stylesheet" type="text/css">
+<link href="landing.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
