--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 <body>
 <header>
     <nav class="center-nav">
-      <img src="IMG/LOGO AKU.png" alt="Logo" class="logo" />
+      <img src="IMG/LOGO-AKU.png" alt="Logo" class="logo" />
     </nav>
   </header>
 
