--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="wrapper">	
 <div id= "intro">
 	<a href="option.html">
-	<img src="IMG/main page (2).png" width="1498" height="745">
+	<img src="IMG/mainpage.png" width="1498" height="745">
 	</a>
 </div>
 	
