--- a/valorant.html
+++ b/valorant.html
@@ -13,7 +13,7 @@
 	
 <div class="video-container">
     <video autoplay muted loop playsinline>
-      <source src="video/valor.mp4" type="video/mp4">
+      <source src="valor.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -27,7 +27,7 @@
 
   <div class="game-video">
     <video controls>
-      <source src="video/clipvalorant.mp4" type="video/mp4" />
+      <source src="Clipvalorant.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
