--- a/option.html
+++ b/option.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>option</title>
-<link href="css/option.css" rel="stylesheet" type="text/css"></head>
+<link href="option.css" rel="stylesheet" type="text/css"></head>
 
 <body>
 	
