--- a/valorant.html
+++ b/valorant.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>valorant</title>
-<link href="css/valorant.css" rel="stylesheet" type="text/css">
+<link href="valorant.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
