--- a/marvel.html
+++ b/marvel.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>marvelrival</title>
-<link href="css/marvel.css" rel="stylesheet" type="text/css">
+<link href="marvel.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
   <div class="game-video">
     <video controls>
-      <source src="video/clipmarvel.mp4" type="video/mp4" />
+      <source src="Clipmarvel.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
