--- a/city.html
+++ b/city.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>citiesskyline</title>
-<link href="css/city.css" rel="stylesheet" type="text/css">
+<link href="city.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 	
 <div class="video-container">
     <video autoplay muted loop playsinline>
-      <source src="video/city.mp4" type="video/mp4">
+      <source src="City.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
