--- a/city.html
+++ b/city.html
@@ -27,7 +27,7 @@
 
   <div class="game-video">
     <video controls>
-      <source src="video/clipcity.mp4" type="video/mp4" />
+      <source src="clipcity.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
