--- a/overwatch.html
+++ b/overwatch.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>overwatch</title>
-<link href="/overwatch.css" rel="stylesheet" type="text/css">
+<link href="overwatch.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
