--- a/marvel.html
+++ b/marvel.html
@@ -13,7 +13,7 @@
 	
 <div class="video-container">
     <video autoplay muted loop playsinline>
-      <source src="video/marvy.mp4" type="video/mp4">
+      <source src="marvy.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
